# libfhir

./: Cargo.toml  LICENSE  README.md
fixtures/r4/resources/: endpoint.json  healthcare_service.json  location.json  organization.json  organization_affiliation.json  practitioner.json  practitioner_role.json
src/: error.rs  fhir.rs  lib.rs  main.rs
src/fhir/: r4b.rs
src/fhir/r4b/: endpoint.rs  organization.rs  resources.rs
src/fhir/r4b/resources/: identifier.rs  reference.rs  reference_types.rs  resource_type.rs
src/r4/: lib.rs
src/r4/elements/: codeable_concept.rs  complex_types.rs  contact_point.rs  element.rs  identifier.rs  reference.rs
src/r4/elements/common/: available_time.rs  not_available.rs
src/r4/elements/complex_types/: address.rs  attachment.rs  codeable_concept.rs  coding.rs  contact_point.rs  human_name.rs  identifier.rs  money.rs  period.rs  quantity.rs  range.rs  ratio.rs  sampled_data.rs
src/r4/elements/complex_types/address/: builder.rs  element.rs
src/r4/resources/: endpoint.rs  healthcare_service.rs  location.rs  organization.rs  organization_affiliation.rs  practitioner.rs  practitioner_role.rs  resource.rs
src/r4/resources/endpoint/: builder.rs  resource.rs
src/r4/resources/healthcare_service/: builder.rs  resource.rs
src/r4/resources/location/: builder.rs  resource.rs
src/r4/resources/organization/: builder.rs  resource.rs
src/r4/resources/organization_affiliation/: builder.rs  resource.rs
src/r4/resources/practitioner/: builder.rs  resource.rs
src/r4/resources/practitioner_role/: builder.rs  resource.rs
(+4 files in other folders)
